# tradingsignal-app

./: README.md  app.py  pyproject.toml  requirments.txt  temp_stocks.txt
attached_assets/: Pasted--Technical-Analysis-Chart-Price-Patterns-Support-Resistance-Levels-Identify-key-price-leve-1740990831715.txt
modules/: ai_analyzer.py  data_fetcher.py  market_analysis.py  notifications.py  stock_monitor.py  technical_analysis.py  visualization.py
